Added basic drawing elements and a clear button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+  <button id="rectangles"> Run Rectangles</button>
+  <button id="clear-canvas"> Clear Canvas</button>
+  <button id="draw"> Draw</button>
   <!-- Creates a canvas area to draw for JS -->
   <canvas id="canvas">
 
