Added, Color Picker, Line Width, Line Cap to draw

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   <button id="rectangles"> Run Rectangles</button>
   <button id="clear-canvas"> Clear Canvas</button>
   <button id="draw"> Draw</button>
+  <input type="color" id="color" value="#00000">
+  <input type="number" min="1" max="20" id="line-width" value="1">
+  <select for="line-cap" id="line-cap">
+    <option value="round">Rounded</option>
+    <option value="square">Squared</option>
+  </select>
   <!-- Creates a canvas area to draw for JS -->
   <canvas id="canvas">
 
